Added a feature to customize how warnings are logged